argo/canary-with-argo-istio/templates/demo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo
---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: canary-demo-v1
#   namespace: demo
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: canary-demo
#       version: v1
#   template:
#     metadata:
#       labels:
#         app: canary-demo
#         version: v1
#     spec:
#       containers:
#         - name: canary-demo
#           image: argoproj/rollouts-demo:blue
#           ports:
#           - containerPort: 8080
---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: canary-demo-v2
#   namespace: demo
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: canary-demo
#       version: v2
#   template:
#     metadata:
#       labels:
#         app: canary-demo
#         version: v2
#     spec:
#       containers:
#         - name: canary-demo
#           image: argoproj/rollouts-demo:yellow
#           ports:
#           - containerPort: 8080
---
kind: Service
apiVersion: v1
metadata:
    name: canary-demo-service
    namespace: demo
spec:
  # type: NodePort
  selector:
    app: canary-demo
  ports:
  - port: 80
    targetPort: 8080
    # nodePort: 30001
    protocol: TCP
