argo/canary-with-argo-istio/templates/demo-gw.yaml
kind: Gateway
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: demo-gw
  namespace: demo
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http-demo
      protocol: HTTP
    hosts:
        - "*"
