argo/canary-with-argo-istio/templates/demo-virtualservice.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  namespace: demo
  name: canary-demo-dr
spec:
  host: canary-demo-service.demo.svc.cluster.local
  subsets:
    - name: v1
      labels:
        app: canary-demo
    - name: v2
      labels:
        app: canary-demo
---
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  namespace: demo
  name: canary-demo-vs
spec:
  http:
    - name: primary
      route:
        - destination:
            host: canary-demo-service.demo.svc.cluster.local
            subset: v1
          weight: 100
        - destination:
            host: canary-demo-service.demo.svc.cluster.local
            subset: v2
          weight: 0
      match:
        - headers:
            end-user:
              exact: dbg
    - name: canary
      route:
        - destination:
            host: canary-demo-service.demo.svc.cluster.local
            subset: v1
          weight: 0
        - destination:
            host: canary-demo-service.demo.svc.cluster.local
            subset: v2
          weight: 100
      match:
        - headers:
            end-user:
              exact: dongbin
    - route:
        - destination:
            host: canary-demo-service.demo.svc.cluster.local
            subset: v1
          weight: 50
        - destination:
            host: canary-demo-service.demo.svc.cluster.local
            subset: v2
          weight: 50
  hosts:
    - canary-demo-service.demo.svc.cluster.local
  gateways:
    - demo/demo-gw
